--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         How can fans own the teams?
                     </h5>
                     <p>
-                        Owning shares of professional sports teams is never easy. But I believe the impact of a strong
+                        Owning shares of professional sports teams is never easy. But we believe the impact of a strong
                         community of fans can give us great advantages. While there are many unanswered questions, we
                         have a general blueprint in mind:
                     </p>
