--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                                 </svg>
                             </a>
                         </div>
+                        <div class="user_option">
+                            <a href="https://twitter.com/goatwithus" class="chakra-link chakra-button css-mik0rd">
+                                <img src="images/twitter.png" alt="" height="20" width="20">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </nav>
